fixing scrollbar on chromium

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,5 +24,8 @@ a {
 
 * {
   box-sizing: border-box;
-  scrollbar-width: none;
+  scrollbar-width: none; /* Firefox */
+}
+::-webkit-scrollbar {
+  display: none; /* Chrome Safari */
 }
